Update tests and fix a few errors in code spotted through them

--- a/tests/files/bb/region.properties
+++ b/tests/files/bb/region.properties
@@ -5,6 +5,8 @@
 browser.search.defaultenginename = Yahoo
 browser.search.order.1 = Google
 browser.search.order.2 = Yahoo
+browser.search.order.3 =
+browser.search.order.4 = 谷歌搜索
 browser.contentHandlers.types.0.title = Mio Yahoo!
 browser.contentHandlers.types.0.uri = https://add.my.yahoo.com/rss?url=%s
 browser.contentHandlers.types.1.title = òàù+è§
