--- a/data/beta/mobile/browser-region/region.properties
+++ b/data/beta/mobile/browser-region/region.properties
@@ -2,7 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# Increment this number when anything gets changed in the list below.  This will
+# This preference is only used to generate browsersearch.json.
+browser.search.defaultenginename=Google
+
+# increment this number when anything gets changed in the list below.  This will
 # cause Firefox to re-read these prefs and inject any new handlers into the
 # profile database.  Note that "new" is defined as "has a different URL"; this
 # means that it's not possible to update the name of existing handler, so
